# Expander

./: .gitignore  CMakeLists.txt  CMakeLists.txt.bak
benchmarks/: CMakeLists.txt  bench_keccak.cpp
include/LinearGKR/: cuda.hpp  scratch_pad.hpp  sumcheck.hpp  sumcheck_helper.hpp
include/circuit/: circuit.hpp  circuit_raw.hpp
include/configuration/: config.hpp
include/cuda/: circuit.cuh  common.cuh  export.hpp  gkr_helper.cuh  m31.cuh  scratchpad.cuh
include/field/: M31.hpp
include/utils/: myutil.hpp
lib/btc_sha256/: CMakeLists.txt
src/cuda/: CMakeLists.txt  export.cu  test.cu
tests/: CMakeLists.txt
